--- a/html/Portfolio.html
+++ b/html/Portfolio.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
 </head>
 
-<body>
+<body style="scroll-behavior: smooth;">
     <header>
         <h1><b>Saja Hammad</b></h1>
     </header>
@@ -20,7 +20,9 @@
     </nav>
     <section id="about">
         <h2>About me</h2>
-        <p></p>
+        <p>I am Saja Hammad, a fifth-year undergraduate student at Arab American University-jenin.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nobis, maxime ipsa asperiores quod provident dolores molestiae voluptatum aperiam magni? Blanditiis voluptas ab deleniti exercitationem nulla, sequi pariatur quo quia.
+        </p>
     </section>
     <hr>
     <section id="#resume">
@@ -39,23 +41,23 @@
             <li>
                 <dl>
                     <dt>
-                        <h4>Web</h4>
+                        <h4>Web development</h4>
                         <p>Store</p>
-                        <img src="">
+                        <img src="../imges/store.jpg" width="50%" height="50%">
                     </dt>
                 </dl>
                 <dl></dl>
                 <dt>
                     <p>News</p>
-                    <img src="">
+                    <img src="../imges/news.jpg" width="50%" height="50%">
                 </dt>
                 </dl>
             </li>
 
             <li>
-                <h4>Python</h4>
+                <h4>Python project using flask</h4>
                 <p>Library</p>
-                <img src="">
+                <img src="../imges/booklibrary.jpg" width="50%" height="50%">
             </li>
         </ol>
     </section>
