Adding CSS file

--- a/html/Portfolio.html
+++ b/html/Portfolio.html
@@ -1,70 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-</head>
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
 
-<body style="scroll-behavior: smooth;">
-    <header>
-        <h1><b>Saja Hammad</b></h1>
+  <body>
+    <header id="up">
+      <h1><b>Saja Hammad</b></h1>
     </header>
+    <a href="#up" id="up">↑</a>
     <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#projects">Projects</a></li>
-        </ul>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
     </nav>
-    <section id="about">
-        <h2>About me</h2>
-        <p>I am Saja Hammad, a fifth-year undergraduate student at Arab American University-jenin.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nobis, maxime ipsa asperiores quod provident dolores molestiae voluptatum aperiam magni? Blanditiis voluptas ab deleniti exercitationem nulla, sequi pariatur quo quia.
-        </p>
+    <section>
+      <h2 id="about">About me</h2>
+      <p>
+        I am Saja Hammad, a fifth-year undergraduate student at Arab American
+        University-jenin. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Repellendus nobis, maxime ipsa asperiores quod provident dolores
+        molestiae voluptatum aperiam magni? Blanditiis voluptas ab deleniti
+        exercitationem nulla, sequi pariatur quo quia.
+      </p>
     </section>
-    <hr>
-    <section id="#resume">
-        <h2>Resume</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa libero doloribus aut iure fugit omnis explicabo
-            sequi, blanditiis repellat, ducimus repudiandae ullam odio possimus, obcaecati laborum temporibus minus.
-            Quia, asperiores.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate porro deleniti illo, excepturi
-            in quaerat tenetur accusamus, hic, est quia nam vero ducimus iure eaque voluptatum? Quaerat, fugiat quo.
-        </p>
+    <hr />
+    <section>
+      <h2 id="resume">Resume</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa libero
+        doloribus aut iure fugit omnis explicabo sequi, blanditiis repellat,
+        ducimus repudiandae ullam odio possimus, obcaecati laborum temporibus
+        minus. Quia, asperiores. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Distinctio voluptate porro deleniti illo, excepturi in
+        quaerat tenetur accusamus, hic, est quia nam vero ducimus iure eaque
+        voluptatum? Quaerat, fugiat quo.
+      </p>
     </section>
-    <hr>
-    <section id="#projects">
-        <h2>Projects</h2>
-        <ol>
+    <hr />
+    <section>
+      <h2 id="projects">Projects</h2>
+      <ol>
+        <li>
+          <ul>
+            <h4>Web development</h4>
             <li>
-                <dl>
-                    <dt>
-                        <h4>Web development</h4>
-                        <p>Store</p>
-                        <img src="../imges/store.jpg" width="50%" height="50%">
-                    </dt>
-                </dl>
-                <dl></dl>
-                <dt>
-                    <p>News</p>
-                    <img src="../imges/news.jpg" width="50%" height="50%">
-                </dt>
-                </dl>
+              <p>Store</p>
+              <img src="../imges/store.jpg" width="50%" height="50%" />
             </li>
+            <li>
+              <p>News</p>
+              <img src="../imges/news.jpg" width="50%" height="50%" />
+            </li>
+          </ul>
+        </li>
 
+        <li>
+          <ul>
+            <h4>Python</h4>
             <li>
-                <h4>Python project using flask</h4>
-                <p>Library</p>
-                <img src="../imges/booklibrary.jpg" width="50%" height="50%">
+              <p>Library</p>
+              <img src="../imges/library.png" width="50%" height="50%" />
             </li>
-        </ol>
+          </ul>
+        </li>
+      </ol>
     </section>
-    <hr>
+    <hr />
     <footer>
-        <a href="contact-me.html"><b>Contact me</b></a>
+      <a href="contact-me.html">Contact me </a>
     </footer>
-</body>
-
+  </body>
 </html>
