--- a/html/contact-me.html
+++ b/html/contact-me.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact Saja</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
+  <body>
     <h1>Welcome!😊</h1>
     <form action="" method="post">
-        <hr>
-        <table>
-            <tr>
-                <td>
-                    <label for="v_name">Your name</label>
-                </td>
-                <td>
-                    <input type="text" id="v_name" name="v_name" required>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    
-                    <label for="v_email">Your email</label>
-                    <br>
-                </td>
-                <td>
-                    <input type="email" id="v_email" name="v_email">
-                    <br>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2"> <textarea  placeholder="write your message please"></textarea></td>
-            </tr>
-            <tr>
-                <td>
-                    <input type="button" value="Submit">
-                </td>
-                <td>
-                    <a href="Portfolio.html">returne</a>
-                </td>
-            </tr>
-        </table>
-        <hr>
+      <hr />
+      <table>
+        <tr>
+          <td>
+            <label for="v_name">Your name</label>
+          </td>
+          <td>
+            <input type="text" id="v_name" name="v_name" required />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="v_email">Your email</label>
+            <br />
+          </td>
+          <td>
+            <input type="email" id="v_email" name="v_email" />
+            <br />
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <textarea placeholder="write your message please"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <!--<input type="button" value="Submit">-->
+            <a href="mailtosaj"></a>
+          </td>
+          <td>
+            <a href="Portfolio.html">returne</a>
+          </td>
+        </tr>
+      </table>
+      <hr />
     </form>
-</body>
+  </body>
 </html>
