--- a/html/Portfolio.html
+++ b/html/Portfolio.html
@@ -73,7 +73,9 @@
     </section>
     <hr />
     <footer>
-      <a href="contact-me.html">Contact me </a>
+      <a href="contact-me.html"><i>Contact me</i></a>
+      <a href="https://web.telegram.org/k/#@saja_b_h">Any feedback? Please contact me <i>here</i></a>
+
     </footer>
   </body>
 </html>
