--- a/ex5-Flex/flexTemp.html
+++ b/ex5-Flex/flexTemp.html
@@ -10,12 +10,19 @@
    <header></header>
    <div class="all">
         <section class="left">
-            <div class="rect" style="background-color: rgba(0, 0, 0, 0.861);"></div>
-            <div class="rect"></div>
-            <div class="rect"></div>
-        <!--     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="#6666">
-            <path d="M24 12l-9-9v7h-15v4h15v7z" />
-            </svg> -->
+            <div class="upper">
+                <div class="upper-left">
+                <div class="rect" style="background-color: rgba(0, 0, 0, 0.861);"></div>
+                <div class="rect"></div>
+                <div class="rect"></div>
+            </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="#6666">
+                    <path d="M24 12l-9-9v7h-15v4h15v7z" />
+                </svg>
+            
+            </div>
+
+        
             <div class="box"></div>
             <div class="news">
                 <div>
@@ -83,7 +90,7 @@
                 <p>site molestias! amet consectetur, adipisicing elit. Sunt minus reprehenderit,necessitatibus harum odio hic eos sequi cupiditate?</p>
             </div>
             <p>Lorem ipsum, dolor sit corrupti recusandae cupiditate nesciunt aperiam libero dolores amet sequi sit provident ullam ipsa eos nulla sed quibusdam, ducimus facilis repudiandae totam?</p>
-            <hr style="border:2px solid rgba(0, 0, 0, 0.666);">
+            <hr style="border:1px solid rgba(0, 0, 0, 0.666);">
             <div class="news">
                 <div class="img"></div>
                 <p>site molestias! amet consectetur, adipisicing elit. Sunt minus reprehenderit,necessitatibus harum odio hic eos sequi cupiditate?</p>
